--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -14,8 +14,9 @@ jobs:
 
       - name: Install Miniconda
         run: |
+          mkdir "$HOME/miniforge"
           curl -L "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-MacOSX-arm64.sh" -o miniforge.sh
-          bash miniforge -b -p "$HOME/miniforge"
+          bash miniforge.sh -b -p "$HOME/miniforge"
           echo "$HOME/miniforge"
       
       - name: run installation script
