--- a/.github/workflows/test-gcs-upload.yml
+++ b/.github/workflows/test-gcs-upload.yml
@@ -24,10 +24,14 @@ jobs:
         zip -r hello-world.zip hello-world/
         echo "Repository zipped!"
 
+    - name: Authenticate with Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GOOGLE_STORAGE_UPLOAD_KEY }}  # Your secret for the service account JSON key
+
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
-        service_account_key: ${{ secrets.GOOGLE_STORAGE_UPLOAD_KEY }}
         project_id: github-file-storage
 
     - name: Upload zip to GCS
