--- a/.github/workflows/test-gcs-upload.yml
+++ b/.github/workflows/test-gcs-upload.yml
@@ -36,18 +36,18 @@ jobs:
 
     - name: Upload file to GCS (replacing any old files)
       run: |
-        FOLDER_NAME="v5.21/"
+        FOLDER_NAME="v5.21"
         BUCKET_NAME="github-release-files-storage"
         FILE_NAME="osx-arm-v5.21.zip"
 
-        echo "Uploading $FILE_NAME to $FOLDER_NAME in bucket $BUCKET_NAME"
+        echo "Uploading $FILE_NAME to /$FOLDER_NAME/ in bucket $BUCKET_NAME"
         
         # Ensure the folder exists by creating a null object
-        gsutil -q stat gs://$BUCKET_NAME/$FOLDER_NAME || gsutil cp /dev/null gs://$BUCKET_NAME/$FOLDER_NAME
+        gsutil -q stat gs://$BUCKET_NAME/$FOLDER_NAME/ || gsutil cp /dev/null gs://$BUCKET_NAME/$FOLDER_NAME/
 
         # Upload the file, overwriting any existing file with the same name
-        gsutil cp -r $FILE_NAME gs://$BUCKET_NAME/$FOLDER_NAME
-        echo "File uploaded to GCS at gs://$BUCKET_NAME/$FOLDER_NAME$FILE_NAME"
+        gsutil cp -r $FILE_NAME gs://$BUCKET_NAME/$FOLDER_NAME/
+        echo "File uploaded to GCS at gs://$BUCKET_NAME/$FOLDER_NAME/$FILE_NAME"
 
         # Form the public URL
         PUBLIC_URL="https://storage.googleapis.com/$BUCKET_NAME/$FOLDER_NAME/$FILE_NAME"
