--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -73,19 +73,24 @@ jobs:
   
       - name: Upload file to GCS (replacing any old files)
         run: |
-          FOLDER_NAME="${{ env.RELEASE_VERSION }}"
+          # init vars
           BUCKET_NAME="${{ env.BUCKET_NAME }}"
-          FILE_NAME="osx-arm-${{ env.RELEASE_VERSION }}.zip"
-          
-          echo "Uploading $FILE_NAME to /$FOLDER_NAME/ in bucket $BUCKET_NAME"
-          
-          # Ensure the folder exists by creating a null object
-          gsutil -q stat gs://$BUCKET_NAME/$FOLDER_NAME/ || gsutil cp /dev/null gs://$BUCKET_NAME/$FOLDER_NAME/
+          PINNED_FOLDER_NAME="${{ env.RELEASE_VERSION }}"
+          LATEST_FOLDER_NAME="latest"
+          PINNED_FILE_NAME="osx-arm-${{ env.RELEASE_VERSION }}.zip"
+          LATEST_FILE_NAME="osx-arm-latest.zip"
+
+          # upload release pinned version
+          echo "Uploading $PINNED_FILE_NAME to /$FOLDER_NAME/ in bucket $BUCKET_NAME"                                         # log
+          gsutil -q stat gs://$BUCKET_NAME/$FOLDER_NAME/ || gsutil cp /dev/null gs://$BUCKET_NAME/$FOLDER_NAME/               # create folder
+          gsutil cp -r $PINNED_FILE_NAME gs://$BUCKET_NAME/$FOLDER_NAME/$PINNED_FILE_NAME                                     # upload file
+          echo "Uploaded $PINNED_FILE_NAME to GCS at gs://$BUCKET_NAME/$FOLDER_NAME/$PINNED_FILE_NAME"                        # log
+          echo "File is publicly accessible at: https://storage.googleapis.com/$BUCKET_NAME/$FOLDER_NAME/$PINNED_FILE_NAME"   # url
+
+          # upload latest release version
+          echo "Uploading $LATEST_FILE_NAME to /latest/ in bucket $BUCKET_NAME"                                               # log
+          gsutil -q stat gs://$BUCKET_NAME/latest/ || gsutil cp /dev/null gs://$BUCKET_NAME/latest/                           # create folder 
+          gsutil cp -r $PINNED_FILE_NAME gs://$BUCKET_NAME/$FOLDER_NAME/$LATEST_FILE_NAME                                     # upload file
+          echo "Uploaded $LATEST_FILE_NAME to GCS at gs://$BUCKET_NAME/$FOLDER_NAME/$LATEST_FILE_NAME"                        # log
+          echo "File is publicly accessible at: https://storage.googleapis.com/$BUCKET_NAME/$FOLDER_NAME/$PINNED_FILE_NAME"   # log
   
-          # Upload the file, overwriting any existing file with the same name
-          gsutil cp -r $FILE_NAME gs://$BUCKET_NAME/$FOLDER_NAME/
-          echo "File uploaded to GCS at gs://$BUCKET_NAME/$FOLDER_NAME/$FILE_NAME"
-  
-          # Form the public URL
-          PUBLIC_URL="https://storage.googleapis.com/$BUCKET_NAME/$FOLDER_NAME/$FILE_NAME"
-          echo "File is publicly accessible at: $PUBLIC_URL"
