--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -94,13 +94,31 @@ jobs:
           echo "Uploaded $LATEST_FILE_NAME to GCS at gs://$BUCKET_NAME/$LATEST_FOLDER_NAME/$LATEST_FILE_NAME"                        # log
           echo "File is publicly accessible at: https://storage.googleapis.com/$BUCKET_NAME/$LATEST_FOLDER_NAME/$LATEST_FILE_NAME"   # url
 
-      - name: Append pinned URL to release body
-        uses: octokit/request-action@v2
-        with:
-          route: PATCH /repos/${{ github.repository }}/releases/${{ github.event.release.id }}
-          release_id: ${{ github.event.release.id }}
-          body: |
-            ${{ github.event.release.body }}
-            ## Downloads
-            The MacOS version is available for download at: [osx-arm-${{ env.RELEASE_VERSION }}.zip](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/osx-arm-${{ env.RELEASE_VERSION }}.zip)
+      # - name: Append pinned URL to release body
+      #   uses: octokit/request-action@v2
+      #   with:
+      #     route: PATCH /repos/${{ github.repository }}/releases/${{ github.event.release.id }}
+      #     release_id: ${{ github.event.release.id }}
+      #     body: |
+      #       ${{ github.event.release.body }}
+      #       ## Downloads
+      #       The MacOS version is available for download at: [osx-arm-${{ env.RELEASE_VERSION }}.zip](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/osx-arm-${{ env.RELEASE_VERSION }}.zip)
 
+      - name: Append pinned URL to release body
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const release_id = '${{ github.event.release.id }}';
+            const release_body = `${{ github.event.release.body }}
+            
+            ## Pinned Version
+            The pinned version is available for download at: [Pinned File URL](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/osx-arm-${{ env.RELEASE_VERSION }}.zip)`;
+      
+            const { data } = await github.rest.repos.updateRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: release_id,
+              body: release_body
+            });
+      
+            console.log('Release body updated with pinned URL');
