--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -104,21 +104,23 @@ jobs:
       #       ## Downloads
       #       The MacOS version is available for download at: [osx-arm-${{ env.RELEASE_VERSION }}.zip](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/osx-arm-${{ env.RELEASE_VERSION }}.zip)
 
-      - name: Append pinned URL to release body
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const release_id = '${{ github.event.release.id }}';
-            const release_body = `${{ github.event.release.body }}
-            
-            ## Pinned Version
-            The pinned version is available for download at: [Pinned File URL](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/osx-arm-${{ env.RELEASE_VERSION }}.zip)`;
-      
-            const { data } = await github.rest.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: release_id,
-              body: release_body
-            });
-      
-            console.log('Release body updated with pinned URL');
+      - name: Set up GitHub CLI
+        uses: cli/cli-action@v2
+  
+      - name: Get the release body
+        id: get_release
+        run: |
+          release=$(gh release view ${{ github.ref_name }} --json body -q .body)
+          echo "::set-output name=body::$release"
+  
+      - name: Append link to release body
+        id: append_link
+        run: |
+          new_body="${{ steps.get_release.outputs.body }}
+  
+          [My Link](https://example.com)"
+          echo "::set-output name=new_body::$new_body"
+  
+      - name: Update the release body
+        run: |
+          gh release edit ${{ github.ref_name }} --notes "${{ steps.append_link.outputs.new_body }}"
