--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -104,8 +104,11 @@ jobs:
       #       ## Downloads
       #       The MacOS version is available for download at: [osx-arm-${{ env.RELEASE_VERSION }}.zip](https://storage.googleapis.com/${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/osx-arm-${{ env.RELEASE_VERSION }}.zip)
 
-      - name: Set up GitHub CLI
-        uses: cli/cli-action@v2
+      - name: Install GitHub CLI
+        run: brew install gh
+  
+      - name: Authenticate GitHub CLI
+        run: gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
   
       - name: Get the release body
         id: get_release
