--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -31,7 +31,9 @@ jobs:
 
       - name: Zip folder contents
         run: |
-          zip -r osx-arm-${{ env.RELEASE_VERSION }}.zip "$HOME/EcoAssist"
+          pushd "$HOME"
+          zip -r osx-arm-${{ env.RELEASE_VERSION }}.zip EcoAssist/*
+          popd
 
       # - name: Upload release asset
       #   uses: actions/upload-release-asset@v1
