--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Zip folder contents
         run: |
           pushd "$HOME"
-          zip -r osx-arm-${{ env.RELEASE_VERSION }}.zip EcoAssist/*
+          zip -r "osx-arm-${{ env.RELEASE_VERSION }}.zip" "EcoAssist ${{ env.RELEASE_VERSION }}/*"
           popd
 
       # - name: Upload release asset
